--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
+### Yeoman template
 node_modules/
 bower_components/
 *.log
 
 build/
 dist/
+
+### Sass template
+.sass-cache
+
+### JetBrains template
+## Directory-based project format
+.idea/
+/*.iml
+# if you remove the above rule, at least ignore user-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+# and these sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# and, if using gradle::
+# .idea/gradle.xml
+# .idea/libraries
